# Aqoole-Engine-Android-Vulkan-Rendering-Engine-

./: .gitignore  Licenses.txt  NOTICE.txt  README.md  build.gradle  gradle.properties  settings.gradle
AqooleEngine/: build.gradle
AqooleEngine/src/androidTest/java/com/example/aqooleengine/: ExampleInstrumentedTest.java
AqooleEngine/src/main/: AndroidManifest.xml
AqooleEngine/src/main/cpp/: AqooleEngine.cpp  CMakeLists.txt
AqooleEngine/src/main/cpp/AEInclude/: AEBuffer.hpp  AECommand.hpp  AEDevice.hpp  AEDeviceQueue.hpp  AEDrawObjects.hpp  AEImage.hpp  AEMatrix.hpp  AEPipeline.hpp  AESyncObjects.hpp  AEUBO.hpp  AEWindow.hpp  descriptorSet.hpp
AqooleEngine/src/main/cpp/AEInclude/imgui/imgui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
AqooleEngine/src/main/cpp/AESrc/: 20190621main.cpp  20200806raymarchingMain.cpp  AEBuffer.cpp  AECommand.cpp  AEDevice.cpp  AEDeviceQueue.cpp  AEDrawObjects.cpp  AEImage.cpp  AEMatrix.cpp  AEPipeline.cpp  AESyncObjects.cpp  AEWindow.cpp  ComputePipeline.sv.cpp  MyVulkan.cpp  descriptorSet.cpp  mainTestAsm.cpp
AqooleEngine/src/main/cpp/boost/boost/property_tree/: xml_parser.hpp
AqooleEngine/src/test/java/com/example/aqooleengine/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/cowboy/: cowboy.glb
app/src/main/assets/fuse-woman-1/source/: NOTICE.txt  woman 1.fbx  woman.mtl  woman_walk .txt
app/src/main/assets/phoenix-bird/: phoenix.glb
app/src/main/java/com/aqoole/: vulkanApplication.java  vulkanApplication.kt  vulkanNativeActivity.java  vulkanNativeActivity.kt
app/src/main/jni/: AndroidMain.cpp  VulkanMain.cpp  VulkanMain.hpp  VulkanMain_20220203.cpp  glm  myVulkanInclude  myVulkanSrc
app/src/main/res/layout/: widgets.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: .gitignore  07_animationGltf.comp  07_animationGltfMorph.comp  07_animationVertex.comp  07_anyHit.rahit  07_batchRayTracingshader.bat  07_batchRayTracingshader.sh  07_closestHit.rchit  07_closestHit.rchit.saved  07_colorBlend.rchit  07_missWaterColor.rmiss  07_rayRchit.spv  07_rayRmiss.spv  07_raycommon.glsl  07_raygen.rgen  07_raygenRgen.spv  07_raymiss.rmiss  07_shadow.rmiss  07_wave.comp  tri.frag  tri.vert
gradle/wrapper/: gradle-wrapper.properties
